# bisq-musig

./: .gitignore  CLAUDE.local.md  CRUSH.md  Cargo.toml  README.md  SECURITY.md  install-hooks.sh  rustfmt.toml  test-runner.sh
.github/: pull_request_template.md
.github/workflows/: cont_integration.yml  deploy-pages.yml
adaptor/: Cargo.toml
adaptor/src/: adaptorprotocol.rs  funadaptor.rs
bdktest/: Cargo.toml
bdktest/src/: nigiri.rs
bmp_tracing/: Cargo.toml
bmp_tracing/src/: lib.rs
chain/: Cargo.toml
chain/src/: lib.rs  testchain.rs
concept/: API.md  MuSig2adaptor-rust.md  OverallProtocol.drawio  ProtocolSubStates.md  ProtocolUpdate2.md  README.md  STx6.drawio  STx7.drawio  SilentPayment.md  SingleTxOverview.md  StateMachine.drawio  bisq-musig-modules.drawio  tradefeepayment.drawio  tradefeepayment.md  update.md
concept/blindedsig/: blindedsig-swaptx.md
concept/chainaccess/: mempool-with-ZMQ.md
concept/pandoc/: convert_links.lua  fullwidth.css  pan.sh  pandoc.sh  readme.md  watch.sh
concept/renderedForWeb/: SPDepositTx.html  SingleTxOverview.html  tradefeepayment.html
concept/silentpayment/: DepostTx.drawio  SPDepositTx.md  SilentPayment.md
concept/tradefees/: tradefeepayment.drawio  tradefeepayment.md
concept/watchtower/: OverviewWatchTowers.md
mem/: Cargo.toml
mem/src/: lib.rs
mem/tests/: zmq.rs
poc/sqlcipher_argon2/: Cargo.toml  README.md
poc/sqlcipher_argon2/src/: main.rs
protocol/: Cargo.toml
protocol/src/: internal_key_index_map.rs  lib.rs  mocks.rs  multisig.rs  nigiri.rs  protocol_musig_adaptor.rs  psbt.rs  receiver.rs  script_paths.rs  state.rs  transaction.rs  wallet_service.rs
protocol/tests/: protocol_integration_tests.rs
rpc/: .gitignore  .project  Cargo.toml  README.md  build.rs  clippy.toml  pom.xml
rpc/src/: bmp_service.rs  bmp_wallet_service.rs  lib.rs  observable.rs  protocol.rs  psbt.rs  server.rs  storage.rs  swap.rs  transaction.rs  wallet.rs
rpc/src/main/java/bisq/: BmpClient.java  TradeProtocolClient.java
rpc/src/main/proto/: bmp_protocol.proto  bmp_wallet.proto  rpc.proto
rpc/src/pb/: bmp_converter.rs  bmp_protocol.rs  bmp_wallet.rs  convert.rs  musigrpc.rs  walletrpc.rs
rpc/src/test/java/bisq/: BmpServiceIntegrationTest.java  NigiriCli.java  TestEnvClient.java
rpc/tests/: bmp_service.rs  cli.rs  musigd.rs  wallet_service.rs
testenv/: Cargo.toml  README.md  container-start.md
testenv/src/: lib.rs
testenv/src/esplora_ui/: app.js  index.html  instascan.min.js  light-theme_style.css  notfound.html  robots.txt  style-rtl.css  style.css
testenv/src/esplora_ui/font/inconsolata/: files-hash.json
testenv/src/esplora_ui/js/: infinite-scroll.js
testenv/tests/: persistent_server.rs
tracing/: Cargo.toml
wallet/: Cargo.toml  README.md
wallet/src/: bmp_wallet.rs  chain_data_source.rs  coin_selection.rs  lib.rs  protocol_wallet_api.rs  test_utils.rs  utils.rs
wallet/tests/: wallet_integration_test.rs
