[workspace]
resolver = "3"
members = ["protocol", "rpc", "wallet", "testenv"]
exclude = ["poc"]

[workspace.dependencies]
anyhow = "1.0.100"
bdk_bitcoind_rpc = "0.22.0"
bdk_electrum = { version = "0.23.2", default-features = false, features = ["use-rustls-ring"] }
# v2.2.0 deprecates `bdk_wallet::wallet::signer` without making it clear what alternative to use & how:
bdk_wallet = { version = "~2.1.0", features = ["rusqlite", "keys-bip39"] }
const_format = "0.2.35"
musig2 = { version = "0.3.1", features = ["rand"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
secp = "0.6.0"
thiserror = "2.0.17"
tokio = "1.48.0"

[workspace.lints.rust]
rust-2024-compatibility = "warn"
# Most of the time, changing drop order is harmless ('rust-2024-compatibility' lint):
tail_expr_drop_order = { level = "allow", priority = 1 }

[workspace.lints.clippy]
pedantic = "warn"
# Enable selected 'nursery' and 'restriction' lints...
allow_attributes = "warn"
branches_sharing_code = "warn"
exhaustive_enums = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
missing_const_for_fn = "warn"
renamed_function_params = "warn"
significant_drop_tightening = "warn"
str_to_string = "warn"
try_err = "warn"
unused_trait_names = "warn"
use_self = "warn"
# Probably counterproductive to document errors of all publicly visible fns before the code has matured:
missing_errors_doc = { level = "allow", priority = 1 }
# Panics shall generally only result from bugs in callee code, so this gives too many false positives:
missing_panics_doc = { level = "allow", priority = 1 }
# Probably shouldn't annotate every (public) pure fn with '#[must_use]', so too many false positives:
must_use_candidate = { level = "allow", priority = 1 }
