[package]
name = "chain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bdk_wallet = { workspace = true }

# Only needed for the Testchain implementation:
bdk_electrum = { workspace = true, optional = true }

[features]
test-support = ["dep:bdk_electrum"]

[lints]
workspace = true
