[package]
name = "mem"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
zeromq = { version = "0.4", default-features = false, features = ["tokio-runtime", "tcp-transport"] }
anyhow = { workspace = true }
bdk_wallet = { workspace = true }
hex = { workspace = true }
tokio-stream = "0.1.18"

[dev-dependencies]
testenv = { path = "../testenv" }

[lints]
workspace = true
