[package]
name = "mem"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bdk_wallet = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = { workspace = true }
zeromq = { version = "0.6", default-features = false, features = ["tokio-runtime", "tcp-transport"] }

[dev-dependencies]
testenv = { workspace = true }

[lints]
workspace = true
