[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bdk_electrum = { workspace = true }
bdk_wallet = { workspace = true }
dotenv = "0.15.0"
musig2 = { workspace = true }
paste = "1.0.15"
rand = { workspace = true }
rand_chacha = { workspace = true }
thiserror = { workspace = true }
rustls = { workspace = true }

[dev-dependencies]
bdk_wallet = { workspace = true, features = ["test-utils"] }
const_format = { workspace = true }
tokio = { workspace = true, features = ["macros", "test-util"] }

[lints]
workspace = true
