[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bdk_wallet = { workspace = true }
musig2 = { workspace = true }
paste = "1.0.15"
rand = { workspace = true }
rand_chacha = { workspace = true }
chain = { workspace = true }
# TODO move this to dev-dependencies:
testenv = { path = "../testenv" }
thiserror = { workspace = true }
tracing = { workspace = true }
wallet = { path = "../wallet" }

[dev-dependencies]
chain = { workspace = true, features = ["test-support"] }
bdk_wallet = { workspace = true, features = ["test-utils"] }
bmp_tracing = { workspace = true }
const_format = { workspace = true }

[lints]
workspace = true
