[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bdk_wallet = { workspace = true }
chain = { workspace = true }
musig2 = { workspace = true }
paste = "1.0.15"
rand = { workspace = true }
rand_chacha = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
wallet = { workspace = true }

[dev-dependencies]
bdk_wallet = { workspace = true, features = ["test-utils"] }
bdk_electrum = { workspace = true }
bmp_tracing = { workspace = true }
const_format = { workspace = true }
tokio = { workspace = true }
testenv = { workspace = true }

[lints]
workspace = true
