[package]
name = "testenv"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
bdk_bitcoind_rpc = { workspace = true }
bdk_electrum = { workspace = true }
bdk_wallet = { workspace = true, features = ["test-utils"] }
bmp_tracing = { workspace = true }
# Optional, gated behind the local `test-support` feature so a non-test consumer of `testenv`
# doesn't transitively activate `chain/test-support` (and pull in `bdk_electrum`) on it.
chain = { workspace = true, optional = true }
hex = { workspace = true }
rand = { workspace = true }
secp = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["net"] }

electrsd = { version = "0.36.1", features = [
"esplora_a33e97e1",
"corepc-node_29_0",
] }
hmac = "0.12.1"
sha2 = "0.10.9"

[features]
# Enables the [`Testchain`]-related helpers (notably [`TestEnv::new_testchain`]).
# Consumers that need these must opt in explicitly via `features = ["test-support"]`.
test-support = ["dep:chain", "chain/test-support"]

[dev-dependencies]
serde_json = "1"
