[package]
name = "testenv"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
bdk_bitcoind_rpc = { workspace = true }
bdk_electrum = { workspace = true }
bdk_wallet = { workspace = true, features = ["test-utils"] }
bmp_tracing = { workspace = true }
chain = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
secp = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["net", "signal", "rt"] }

ctrlc = "3.5.2"
electrsd = { version = "0.36.1", features = [
"esplora_a33e97e1",
"corepc-node_29_0",
] }
hmac = "0.12.1"
sha2 = "0.10.9"
typed-arena = "2"

[lints]
workspace = true
