[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
bdk_wallet = { workspace = true }
bdk_electrum = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
secp = { workspace = true }

rusqlite = { workspace = true }
argon2 = { workspace = true, features = ["zeroize"] }
hex = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
rustls = { workspace = true }

[dev-dependencies]
tempfile = "3.23.0"
bdk_wallet = { workspace = true , features = ["test-utils"]}
simple-semaphore = "0.2.0"
once_cell = "1.21"
testenv = { path = "../testenv"}
