[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true, features = ["zeroize"] }
base64 = { workspace = true }
bdk_electrum = { workspace = true }
bdk_kyoto = { workspace = true }
bdk_wallet = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
secp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
bdk_wallet = { workspace = true, features = ["test-utils"] }
simple-semaphore = { workspace = true }
tempfile = { workspace = true }
testenv = { path = "../testenv"}
