[package]
name = "sqlcipher-argon2-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] }
argon2 = "0.5"
hex = "0.4"
anyhow = "1.0"
rand = "0.8"

[profile.dev]
# Faster compilation for development
opt-level = 1

[profile.release]
# Security-focused release build
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
